--- a/lesson-5-html/task3.html
+++ b/lesson-5-html/task3.html
@@ -6,13 +6,13 @@
   <body>
     <p><b>Links to Homeworks:</b></p>
     <ul>
-      <li><a href="task1.html">Task 1</a></li>
-      <li><a href="task2.html">Task 2</a></li>
+      <li><a title="Lesson 5 HTML. Task 1." href="task1.html">Task 1</a></li>
+      <li><a title="Lesson 5 HTML. Task 2." href="task2.html">Task 2</a></li>
     </ul>
     <p><b>Other Links:</b></p>
     <ul>
-      <li><a target="_self" href="https://www.grodno.it-academy.by">IT Academy</a></li>
-      <li><a target="_blank" href="https://ya.ru/">Yandex</a></li>
+      <li><a title="Educational Center for Programming and High Technologies" target="_self" href="https://www.grodno.it-academy.by">IT Academy</a></li>
+      <li><a title="Search System" target="_blank" href="https://ya.ru/">Yandex</a></li>
     </ul>
   </body>
 </html>
