add task2variant2.html add complite it

--- a/lesson-6-html/task2variant2.html
+++ b/lesson-6-html/task2variant2.html
@@ -2,23 +2,30 @@
 <html lang="en, ru">
   <head>
     <meta charset="UTF-8">
-    <title>Lesson6.Task2.</title>
+    <title>Lesson6.Task2.Variant2.</title>
   </head>
   <body>
     <h3>Спутники некоторых планет</h3>
-    <ul>
-      <li>Земля
-        <ol>
-          <li>Луна</li>
-        </ol>
-      </li>
-      <li>Марс
+    <dl>
+      <dt>
+        <ul><li>Земля</li></ul>
+      </dt>
+      <dd>
+        <ol><li>Луна</li></ol>
+      </dd>
+      <dt>
+        <ul><li>Марс</li></ul>
+      </dt>
+      <dd>
         <ol start="2">
           <li>Фобос</li>
           <li>Деймос</li>
         </ol>
-      </li>
-      <li>Уран
+      </dd>
+      <dt>
+        <ul><li>Уран</li></ul>
+      </dt>
+      <dd>
         <ol start="4">
           <li>Ариэль</li>
           <li>Умбриэль</li>
@@ -26,13 +33,16 @@
           <li>Оберон</li>
           <li>Миранда</li>
         </ol>
-      </li>
-      <li>Нептун
+      </dd>
+      <dt>
+        <ul><li>Нептун</li></ul>
+      </dt>
+      <dd>
         <ol start="9">
           <li>Тритон</li>
           <li>Нереида</li>
         </ol>
-      </li>
-    </ul>
+      </dd>
+    </dl>
   </body>
 </html>
