--- a/lesson-6-html/task2.html
+++ b/lesson-6-html/task2.html
@@ -5,6 +5,26 @@
     <title>Lesson 6.Task 2.</title>
   </head>
   <body>
+    <h3>Ссылки на Д/З</h3>
+    <p><strong>Задание 1:</strong></p>
+    <ul>
+      <li><a title="task1.html" href="task1.html">Task 1</a> - Более правильно воссозданая картинка с примера</li>
+      <li><a title="task1variant2.html" href="task1variant2.html">Task 1, v. 2</a> - Другой вариант воссоздания картинки</li>
+    </ul>
+    <p><strong>Задание 2:</strong></p>
+    <ul>
+      <li><a title="task2.html" href="task2.html">Task 2</a>
+        - Основной вариант выполнения второго задания (оформление ссылок сделано при помощи "параграфа")
+      </li>
+      <li><a title="task2variant2.html" href="task2variant2.html">Task 2, v. 2</a>
+        - Выполнение задания через списки определений (оформление ссылок сделано тегами списков)
+      </li>
+    </ul>
+    <p><strong>Задание 3:</strong></p>
+    <ul>
+      <li><a title="task3.html" href="task3.html">Task 3</a> - Использовнаие только тегов списка</li>
+      <li><a title="task3variant2.html" href="task3variant2.html">Task 3, v. 2</a> - Теги списка плюс "параграфы"</li>
+    </ul>
     <h3>Спутники некоторых планет</h3>
     <ul>
       <li>Земля
