add active page(6)

--- a/lesson-9-layouts/task2.html
+++ b/lesson-9-layouts/task2.html
@@ -17,7 +17,7 @@
         <li class="numbers"><a href="#"></a>2</li>
         <li><sub>...</sub></li>
         <li class="numbers"><a href="#"></a>5</li>
-        <li class="numbers"><a href="#"></a>6</li>
+        <li id="active" class="numbers"><a href="#"></a>6</li>
         <li class="numbers"><a href="#"></a>7</li>
         <li class="numbers"><a href="#"></a>8</li>
         <li class="numbers"><a href="#"></a>9</li>
