--- a/lesson-10-layouts/task1.html
+++ b/lesson-10-layouts/task1.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Lesson 10. Task 1.test</title>
-    <link href="style1test.css" rel="stylesheet" type="text/css">
+    <title>Lesson 10. Task 1.</title>
+    <link href="style1.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="title">
