--- a/lesson-12-backgrounds/customers/index.html
+++ b/lesson-12-backgrounds/customers/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SpotHost Customers</title>
-    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="shortcut icon" href="../images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="customers.css">
@@ -14,7 +14,7 @@
     <header class="main-header">
       <div>
         <a href="index.html" class="main-header__brand">
-          <img src="../logo.png" alt="SpotHost - Your favorite hosting company">
+          <img src="../images/logo.png" alt="SpotHost - Your favorite hosting company">
         </a>
       </div>
       <nav class="main-nav">
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <div class="customer">
-      <img class="customer1" src="../customer-1.jpg" alt="No photo">
+      <img class="customer1" src="../images/customer-1.jpg" alt="No photo">
       <div class="info1">
         <h1>Mike Statham</h1>
         <h5>Founder of tech-analysis.com</h5>
@@ -41,7 +41,7 @@
       <div class="clear"></div>
     </div>
     <div class="customer">
-      <img class="customer2" src="../customer-2.jpg" alt="No photo">
+      <img class="customer2" src="../images/customer-2.jpg" alt="No photo">
       <div class="info2">
         <h1>John Mellow</h1>
         <h5>Hosts his private videos on SpotHost.</h5>
