--- a/lesson-12-backgrounds/index.html
+++ b/lesson-12-backgrounds/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SpotHost</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="shared.css">
@@ -14,7 +14,7 @@
     <header class="main-header">
       <div>
         <a href="index.html" class="main-header__brand">
-          <img src="../images/logo.png" alt="SpotHost - Your favorite hosting company">
+          <img src="images/logo.png" alt="SpotHost - Your favorite hosting company">
         </a>
       </div>
       <nav class="main-nav">
