--- a/lesson-12-backgrounds/customers/index.html
+++ b/lesson-12-backgrounds/customers/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="main-header">
       <div>
-        <a href="index.html" class="main-header__brand">
+        <a href="../index.html" class="main-header__brand">
           <img src="../images/logo.png" alt="SpotHost - Your favorite hosting company">
         </a>
       </div>
