--- a/lesson-12-backgrounds/packages/index.html
+++ b/lesson-12-backgrounds/packages/index.html
@@ -10,22 +10,60 @@
     <link rel="stylesheet" href="packages.css">
   </head>
   <body>
-    <div class="plan-block PLUS">
-      <h6>recommended</h6>
-      <h2>Our PLUS Plan</h2>
-      <h2>The most popular choice of our customers.</h2>
-      <p>Benefit from increased storage and faster support to ensure that your mission-critical data and
+    <header class="main-header">
+      <div>
+        <a href="../index.html" class="main-header__brand">
+          <img src="../images/logo.png" alt="SpotHost - Your favorite hosting company">
+        </a>
+      </div>
+      <nav class="main-nav">
+        <ul class="main-nav__items">
+          <li class="main-nav__item">
+            <a href="../packages/index.html">Packages</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="../customers/index.html">Customers</a>
+          </li>
+          <li class="main-nav__item main-nav__item--cta">
+            <a href="../index.html">Start Hosting</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <a href="#" class="plan-block__link">
+      <div class="plan-block PLUS">
+        <h6>recommended</h6>
+        <h2>Our PLUS Plan</h2>
+        <h2>The most popular choice of our customers.</h2>
+        <p>Benefit from increased storage and faster support to ensure that your mission-critical data and
         applications are always available!</p>
-    </div>
-    <div class="plan-block FREE">
-      <h2>Our FREE Plan</h2>
-      <h2>An extremely solid start into our hosting world.</h2>
-      <p>Get started immediately at zero cost!</p>
-    </div>
-    <div class="plan-block PREMIUM">
-      <h2>Our PREMIUM Plan</h2>
-      <h2>All your enterprise needs. Instant support, guaranteed uptime.</h2>
-      <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
-    </div>
+      </div>
+    </a>
+    <a href="#" class="plan-block__link">
+      <div class="plan-block FREE">
+        <h2>Our FREE Plan</h2>
+        <h2>An extremely solid start into our hosting world.</h2>
+        <p>Get started immediately at zero cost!</p>
+      </div>
+    </a>
+    <a href="#" class="plan-block__link">
+      <div class="plan-block PREMIUM">
+        <h2>Our PREMIUM Plan</h2>
+        <h2>All your enterprise needs. Instant support, guaranteed uptime.</h2>
+        <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+      </div>
+    </a>
+    <footer class="main-footer">
+      <nav>
+        <ul class="main-footer__links">
+          <li class="main-footer__link">
+            <a href="#">Support</a>
+          </li>
+          <li class="main-footer__link">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
